<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RoutineActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseListID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/buttonAddExerciseID"
        android:layout_width="@dimen/button_100"
        android:layout_height="@dimen/button_100"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/workout_add"
        android:tint="@color/colorButtonPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_circle_24dp" />

    <ImageView
        android:id="@+id/buttonDeleteExerciseID"
        android:layout_width="@dimen/button_050"
        android:layout_height="@dimen/button_050"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/workout_delete"
        android:tint="@color/colorButtonSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAddExerciseID"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddExerciseID"
        app:layout_constraintTop_toTopOf="@+id/buttonAddExerciseID"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/ic_remove_circle_24dp" />

    <ImageView
        android:id="@+id/buttonCopyExerciseID"
        android:layout_width="@dimen/button_050"
        android:layout_height="@dimen/button_050"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/workout_copy"
        android:tint="@color/colorButtonSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDeleteExerciseID"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteExerciseID"
        app:srcCompat="@drawable/ic_content_copy_24dp" />

    <View
        android:id="@+id/dividerTopMenu2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorTextMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routineLastDateID" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/button_075"
        android:layout_height="@dimen/button_075"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:tint="@color/colorTextSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fitness_24dp" />

    <TextView
        android:id="@+id/routineNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Workout name"
        android:textColor="@color/colorTextMain"
        android:textSize="24sp"
        app:fontFamily="@font/changa"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/routineLastDateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last: 00/00/00"
        android:textColor="@color/colorTextSecondary"
        app:fontFamily="@font/changa"
        app:layout_constraintBottom_toBottomOf="@+id/routineNameID"
        app:layout_constraintStart_toStartOf="@+id/routineNameID"
        app:layout_constraintTop_toBottomOf="@+id/routineNameID" />

    <ImageView
        android:id="@+id/routineStartButtonID"
        android:layout_width="@dimen/button_075"
        android:layout_height="@dimen/button_075"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:tint="@color/colorButtonPrimary"
        app:layout_constraintEnd_toStartOf="@+id/routineEditButtonID"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_play_circle_24dp" />

    <ImageView
        android:id="@+id/routineEditButtonID"
        android:layout_width="@dimen/button_050"
        android:layout_height="@dimen/button_050"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:tint="@color/colorButtonSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/routineStartButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/routineStartButtonID"
        app:srcCompat="@drawable/ic_edit_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXERCISES"
        android:textColor="@color/colorTextMain"
        android:textSize="18sp"
        app:fontFamily="@font/changa"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/dividerTopMenu2" />

</androidx.constraintlayout.widget.ConstraintLayout>